Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.VB

        Public Declare Sub BTI708_MsgReset Lib "BTI70864.DLL" Alias "BTI708_MsgReset" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_MsgTableCreate Lib "BTI70864.DLL" Alias "BTI708_MsgTableCreate" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI708_MsgTableRd Lib "BTI70864.DLL" Alias "BTI708_MsgTableRd" (ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI708_MsgTableReset Lib "BTI70864.DLL" Alias "BTI708_MsgTableReset" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI708_MsgTableWipe Lib "BTI70864.DLL" Alias "BTI708_MsgTableWipe" (ByVal basevaladdr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_MsgTableWr Lib "BTI70864.DLL" Alias "BTI708_MsgTableWr" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ParamAmplitudeGet Lib "BTI70864.DLL" Alias "BTI708_ParamAmplitudeGet" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_TestProtocol Lib "BTI70864.DLL" Alias "BTI708_TestProtocol" (ByVal handleval As IntPtr) As Int32
    End Class
